--- a/index.html
+++ b/index.html
@@ -1,77 +1,62 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
+<html lang="en">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/png" href="./img/favicon.png"/>
 
-    <title>Cover Template for Bootstrap</title>
+  <title>RoadWatch</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
+  <link href="./css/bootstrap.min.css" rel="stylesheet">
+  <link href="./css/cover.css" rel="stylesheet">
+  <link href="./css/roadwatch.css" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500' rel='stylesheet' type='text/css'>
 
-    <!-- Custom styles for this template -->
-    <link href="./css/cover.css" rel="stylesheet">
-
-    <style>.carbonad,
-#content > #right > .dose > .dosesingle,
-#content > #center > .dose > .dosesingle,
-#carbonads-container
-{display:none !important;}</style><script src="./js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <div class="site-wrapper">
-
-      <div class="site-wrapper-inner">
-
-        <div class="cover-container">
-
-          <div class="masthead clearfix">
-            <div class="inner">
-              <h3 class="masthead-brand">Cover</h3>
-              <nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="http://getbootstrap.com/examples/cover/#">Home</a></li>
-                  <li><a href="http://getbootstrap.com/examples/cover/#">Features</a></li>
-                  <li><a href="http://getbootstrap.com/examples/cover/#">Contact</a></li>
-                </ul>
-              </nav>
-            </div>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+</head>
+<body>
+  <div class="site-wrapper">
+    <div class="site-wrapper-inner">
+      <div class="cover-container">
+        <div class="masthead clearfix">
+          <div class="inner">
+            <nav>
+              <ul class="nav masthead-nav">
+                <li class="active"><a href="http://getbootstrap.com/examples/cover/#">Home</a></li>
+                <!-- <li><a href="http://getbootstrap.com/examples/cover/#">Features</a></li> -->
+                <li><a href="mailto:kenny.song@nyu.edu">Contact</a></li>
+              </ul>
+            </nav>
           </div>
+        </div>
 
-          <div class="inner cover">
-            <h1 class="cover-heading">Cover your page.</h1>
-            <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-            <p class="lead">
-              <a href="http://getbootstrap.com/examples/cover/#" class="btn btn-lg btn-default">Learn more</a>
-            </p>
+        <div class="inner cover">
+          <img src="./img/roadWatchLogoTransparent.png" alt="RoadWatch logo">
+          <h1 class="cover-heading">RoadWatch</h1>
+          <p class="lead">RoadWatch is a voice-controlled, real-time driving assistant on your phone and smartwatch, built for the UAE.</p>
+          <p class="lead">
+            <a href="#" class="btn btn-lg btn-default">Download APK (Coming soon)</a>
+          </p>
+        </div>
+
+        <div class="mastfoot">
+          <div class="inner">
+            <p>Built at <a href="http://nyuad.nyu.edu/en/" target="_blank">NYU Abu Dhabi</a></p>
           </div>
-
-          <div class="mastfoot">
-            <div class="inner">
-              <p>Cover template for <a href="http://getbootstrap.com/">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            </div>
-          </div>
-
         </div>
 
       </div>
-
     </div>
+  </div>
 
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/ie10-viewport-bug-workaround.js"></script>
+  <script src="./js/jquery.min.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
