Added dashboard link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <nav>
               <ul class="nav masthead-nav">
                 <li class="active"><a href="http://getbootstrap.com/examples/cover/#">Home</a></li>
-                <!-- <li><a href="http://getbootstrap.com/examples/cover/#">Features</a></li> -->
+                <li><a href="http://moi.roadwatch.ae">Dashboard</a></li>
                 <li><a href="mailto:kenny.song@nyu.edu">Contact</a></li>
               </ul>
             </nav>
