--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="inner cover">
           <img src="./img/roadWatchLogoTransparent.png" alt="RoadWatch logo">
           <h1 class="cover-heading">RoadWatch</h1>
-          <p class="lead">RoadWatch is a voice-controlled, real-time driving assistant on your phone and smartwatch, built for the UAE.</p>
+          <p class="lead">RoadWatch is a real-time driving assistant on your phone and smartwatch, built for the UAE.</p>
           <p class="lead">
             <a href="#" class="btn btn-lg btn-default">Download APK (Coming soon)</a>
           </p>
