--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="./css/bootstrap.min.css" rel="stylesheet">
   <link href="./css/cover.css" rel="stylesheet">
   <link href="./css/roadwatch.css" rel="stylesheet">
+  <link href="./css/magnific-popup.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500' rel='stylesheet' type='text/css'>
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -28,20 +29,22 @@
           <div class="inner">
             <nav>
               <ul class="nav masthead-nav">
-                <li class="active"><a href="http://getbootstrap.com/examples/cover/#">Home</a></li>
+                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
                 <li><a href="http://moi.roadwatch.ae">Dashboard</a></li>
-                <li><a href="mailto:kenny.song@nyu.edu">Contact</a></li>
+                <li><a href="mailto:roadwatchae@gmail.com">Contact</a></li>
               </ul>
             </nav>
           </div>
         </div>
 
         <div class="inner cover">
-          <img src="./img/roadWatchLogoTransparent.png" alt="RoadWatch logo">
+          <img src="./img/roadWatchLogoTransparent.png" id="logo" alt="RoadWatch logo">
           <h1 class="cover-heading">RoadWatch</h1>
           <p class="lead">RoadWatch is a real-time driving assistant on your phone and smartwatch, built for the UAE.</p>
           <p class="lead">
-            <a href="#" class="btn btn-lg btn-default">Download APK (Coming soon)</a>
+            <a href="https://www.youtube.com/watch?v=dvr-aHwhmAs" id="video-btn" class="btn btn-lg btn-default">Watch Video</a>
+            <a href="/about" id="video-btn" class="btn btn-lg btn-default">Learn More</a>
           </p>
         </div>
 
@@ -58,5 +61,19 @@
   <script src="./js/jquery.min.js"></script>
   <script src="./js/bootstrap.min.js"></script>
   <script src="./js/ie10-viewport-bug-workaround.js"></script>
+  <script src="./js/jquery.magnific-popup.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('#video-btn').magnificPopup({
+        disableOn: 700,
+        type: 'iframe',
+        mainClass: 'mfp-fade',
+        removalDelay: 160,
+        preloader: false,
+
+        fixedContentPos: false
+      });
+    });
+  </script>
 </body>
 </html>
