Added personal website links

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             </div>
           </p>
           <h1 class="cover-heading">Team</h1>
-          <p class="lead">RoadWatch was built by Kai-erik Jensen, Maitha Salem, Kenny Song, Quan Vuong, and Ling Zhang at NYU Abu Dhabi.</p>
+          <p class="lead">RoadWatch was built by Kai-erik Jensen, Maitha Salem, <a class="team-url" target="_blank" href="http://kennysong.com/">Kenny Song</a>, <a class="team-url" target="_blank" href="https://www.linkedin.com/in/quan-vuong-0a4a6460">Quan Vuong</a>, and <a class="team-url" target="_blank" href="http://www.lingliang.me/">Ling Zhang</a> at NYU Abu Dhabi.</p>
         </div>
       </div>
     </div>
