Added voting button:

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <a href="https://www.youtube.com/watch?v=dvr-aHwhmAs" id="video-btn" class="btn btn-lg btn-default">Watch Video</a>
             <a href="/about" id="video-btn" class="btn btn-lg btn-default">Learn More</a>
           </p>
+          <p class="lead">
+            <a href="https://indoor.techideas.net/voting/" class="btn btn-lg btn-info" target="_blank">Vote Now</a>
+          </p>
         </div>
 
         <div class="mastfoot">
