--- a/index.html
+++ b/index.html
@@ -41,13 +41,14 @@
         <div class="inner cover">
           <img src="./img/roadWatchLogoTransparent.png" id="logo" alt="RoadWatch logo">
           <h1 class="cover-heading">RoadWatch</h1>
-          <p class="lead">RoadWatch is a real-time driving assistant on your phone and smartwatch, built for the UAE.</p>
+          <p class="lead">RoadWatch is a real-time driving assistant on your phone and smartwatch.</p>
+          <p class="lead votepls">We need your vote to win 1 million dirhams in the 2016 mGov Competition.</p>
           <p class="lead">
-            <a href="https://www.youtube.com/watch?v=dvr-aHwhmAs" id="video-btn" class="btn btn-lg btn-default">Watch Video</a>
-            <a href="/about" id="video-btn" class="btn btn-lg btn-default">Learn More</a>
+            <a href="https://indoor.techideas.net/voting/" id="vote-btn" class="btn btn-lg btn-info" target="_blank">Vote Now</a>
           </p>
           <p class="lead">
-            <a href="https://indoor.techideas.net/voting/" class="btn btn-lg btn-info" target="_blank">Vote Now</a>
+            <a href="https://www.youtube.com/watch?v=dvr-aHwhmAs" id="video-btn" class="btn btn-lg btn-default">Watch Video</a>
+            <!-- <a href="/about" id="video-btn" class="btn btn-lg btn-default">Learn More</a> -->
           </p>
         </div>
 
