Updated for winning

--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
                 <li><a href="/">Home</a></li>
                 <li class="active"><a href="/about">About</a></li>
                 <li><a href="http://moi.roadwatch.ae">Dashboard</a></li>
-                <li><a href="mailto:roadwatchae@gmail.com">Contact</a></li>
+                <li><a href="mailto:roadwatch@nyu.edu">Contact</a></li>
               </ul>
             </nav>
           </div>
@@ -41,6 +41,7 @@
         <div class="inner cover">
           <h1 class="cover-heading">About</h1>
           <p class="lead">RoadWatch is a mobile/smartwatch/web app that monitors driving habits and provides real-time road condition updates from vehicle and MOI data. It also allows the MOI to set dynamic speed limits, create hazard regions, and view anonymized, map-based data on driving habits.</p>
+          <p class="lead">It is the grand prize winner of the 2016 mGov competition.</p>
           <h1 class="cover-heading">Screenshots</h1>
           <p class="lead">
             <div class="popup-gallery">
