--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li class="active"><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="http://moi.roadwatch.ae">Dashboard</a></li>
-                <li><a href="mailto:roadwatchae@gmail.com">Contact</a></li>
+                <li><a href="mailto:roadwatch@nyu.edu">Contact</a></li>
               </ul>
             </nav>
           </div>
@@ -41,14 +41,10 @@
         <div class="inner cover">
           <img src="./img/roadWatchLogoTransparent.png" id="logo" alt="RoadWatch logo">
           <h1 class="cover-heading">RoadWatch</h1>
-          <p class="lead">RoadWatch is a real-time driving assistant on your phone and smartwatch.</p>
-          <p class="lead votepls">We need your vote to win 1 million dirhams in the 2016 mGov Competition.</p>
+          <p class="lead">RoadWatch is a real-time driving assistant on your phone and smartwatch. Grand prize winner of the 2016 mGov competition.</p>
           <p class="lead">
-            <a href="https://indoor.techideas.net/voting/" id="vote-btn" class="btn btn-lg btn-info" target="_blank">Vote Now</a>
-          </p>
-          <p class="lead">
-            <a href="https://www.youtube.com/watch?v=dvr-aHwhmAs" id="video-btn" class="btn btn-lg btn-default">Watch Video</a>
-            <!-- <a href="/about" id="video-btn" class="btn btn-lg btn-default">Learn More</a> -->
+            <a href="https://www.youtube.com/watch?v=dvr-aHwhmAs" id="video-btn" class="btn btn-lg btn-info">Watch Video</a>
+            <a href="/about" id="video-btn" class="btn btn-lg btn-default">Learn More</a>
           </p>
         </div>
 
